--- a/Outside/Base.lproj/Main.storyboard
+++ b/Outside/Base.lproj/Main.storyboard
@@ -81,11 +81,11 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="367"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="weatherCell" rowHeight="80" id="e1l-ba-evu">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="weatherCell" rowHeight="80" id="e1l-ba-evu" customClass="WeatherCell" customModule="Outside" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e1l-ba-evu" id="sw0-zO-qms">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ptT-yL-Elt">
@@ -148,6 +148,13 @@
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                <connections>
+                                                    <outlet property="dayLabel" destination="cDc-Ch-Prv" id="ZUZ-9g-O9a"/>
+                                                    <outlet property="highTempLabel" destination="a36-W9-F5B" id="VVh-30-lHy"/>
+                                                    <outlet property="lowTempLabel" destination="PWX-cE-c0j" id="pwG-4R-Uol"/>
+                                                    <outlet property="weatherIcon" destination="ptT-yL-Elt" id="TuW-o2-YE5"/>
+                                                    <outlet property="weatherTypeLabel" destination="Ttz-BG-e3w" id="Yf3-Ts-xoI"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                     </tableView>
